Update persistence unit